parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CHAR
    COMMA
    INT
    LKEY
    RKEY

Grammar

Rule 0     S' -> statement
Rule 1     statement -> fun
Rule 2     statement -> assignment
Rule 3     statement -> empty
Rule 4     assignment -> file_assignment
Rule 5     assignment -> fun_assignment
Rule 6     fun -> fun_no_param
Rule 7     fun -> fun_single_param
Rule 8     fun -> fun_without_operation
Rule 9     fun_without_operation -> FUN_WITHOUT_OPERATION LP STRING RP SEMICOLON
Rule 10    fun_no_param -> ID DOT FUN_NO_PARAM LP RP
Rule 11    fun_single_param -> ID DOT FUN_SINGLE_PARAM LP STRING RP
Rule 12    file_assignment -> ID EQUALS ID
Rule 13    fun_assignment -> ID EQUALS fun_without_operation
Rule 14    empty -> <empty>

Terminals, with rules where they appear

CHAR                 : 
COMMA                : 
DOT                  : 10 11
EQUALS               : 12 13
FUN_NO_PARAM         : 10
FUN_SINGLE_PARAM     : 11
FUN_WITHOUT_OPERATION : 9
ID                   : 10 11 12 12 13
INT                  : 
LKEY                 : 
LP                   : 9 10 11
RKEY                 : 
RP                   : 9 10 11
SEMICOLON            : 9
STRING               : 9 11
error                : 

Nonterminals, with rules where they appear

assignment           : 2
empty                : 3
file_assignment      : 4
fun                  : 1
fun_assignment       : 5
fun_no_param         : 6
fun_single_param     : 7
fun_without_operation : 8 13
statement            : 0

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . fun
    (2) statement -> . assignment
    (3) statement -> . empty
    (6) fun -> . fun_no_param
    (7) fun -> . fun_single_param
    (8) fun -> . fun_without_operation
    (4) assignment -> . file_assignment
    (5) assignment -> . fun_assignment
    (14) empty -> .
    (10) fun_no_param -> . ID DOT FUN_NO_PARAM LP RP
    (11) fun_single_param -> . ID DOT FUN_SINGLE_PARAM LP STRING RP
    (9) fun_without_operation -> . FUN_WITHOUT_OPERATION LP STRING RP SEMICOLON
    (12) file_assignment -> . ID EQUALS ID
    (13) fun_assignment -> . ID EQUALS fun_without_operation

    $end            reduce using rule 14 (empty -> .)
    ID              shift and go to state 10
    FUN_WITHOUT_OPERATION shift and go to state 11

    statement                      shift and go to state 1
    fun                            shift and go to state 2
    assignment                     shift and go to state 3
    empty                          shift and go to state 4
    fun_no_param                   shift and go to state 5
    fun_single_param               shift and go to state 6
    fun_without_operation          shift and go to state 7
    file_assignment                shift and go to state 8
    fun_assignment                 shift and go to state 9

state 1

    (0) S' -> statement .



state 2

    (1) statement -> fun .

    $end            reduce using rule 1 (statement -> fun .)


state 3

    (2) statement -> assignment .

    $end            reduce using rule 2 (statement -> assignment .)


state 4

    (3) statement -> empty .

    $end            reduce using rule 3 (statement -> empty .)


state 5

    (6) fun -> fun_no_param .

    $end            reduce using rule 6 (fun -> fun_no_param .)


state 6

    (7) fun -> fun_single_param .

    $end            reduce using rule 7 (fun -> fun_single_param .)


state 7

    (8) fun -> fun_without_operation .

    $end            reduce using rule 8 (fun -> fun_without_operation .)


state 8

    (4) assignment -> file_assignment .

    $end            reduce using rule 4 (assignment -> file_assignment .)


state 9

    (5) assignment -> fun_assignment .

    $end            reduce using rule 5 (assignment -> fun_assignment .)


state 10

    (10) fun_no_param -> ID . DOT FUN_NO_PARAM LP RP
    (11) fun_single_param -> ID . DOT FUN_SINGLE_PARAM LP STRING RP
    (12) file_assignment -> ID . EQUALS ID
    (13) fun_assignment -> ID . EQUALS fun_without_operation

    DOT             shift and go to state 12
    EQUALS          shift and go to state 13


state 11

    (9) fun_without_operation -> FUN_WITHOUT_OPERATION . LP STRING RP SEMICOLON

    LP              shift and go to state 14


state 12

    (10) fun_no_param -> ID DOT . FUN_NO_PARAM LP RP
    (11) fun_single_param -> ID DOT . FUN_SINGLE_PARAM LP STRING RP

    FUN_NO_PARAM    shift and go to state 15
    FUN_SINGLE_PARAM shift and go to state 16


state 13

    (12) file_assignment -> ID EQUALS . ID
    (13) fun_assignment -> ID EQUALS . fun_without_operation
    (9) fun_without_operation -> . FUN_WITHOUT_OPERATION LP STRING RP SEMICOLON

    ID              shift and go to state 17
    FUN_WITHOUT_OPERATION shift and go to state 11

    fun_without_operation          shift and go to state 18

state 14

    (9) fun_without_operation -> FUN_WITHOUT_OPERATION LP . STRING RP SEMICOLON

    STRING          shift and go to state 19


state 15

    (10) fun_no_param -> ID DOT FUN_NO_PARAM . LP RP

    LP              shift and go to state 20


state 16

    (11) fun_single_param -> ID DOT FUN_SINGLE_PARAM . LP STRING RP

    LP              shift and go to state 21


state 17

    (12) file_assignment -> ID EQUALS ID .

    $end            reduce using rule 12 (file_assignment -> ID EQUALS ID .)


state 18

    (13) fun_assignment -> ID EQUALS fun_without_operation .

    $end            reduce using rule 13 (fun_assignment -> ID EQUALS fun_without_operation .)


state 19

    (9) fun_without_operation -> FUN_WITHOUT_OPERATION LP STRING . RP SEMICOLON

    RP              shift and go to state 22


state 20

    (10) fun_no_param -> ID DOT FUN_NO_PARAM LP . RP

    RP              shift and go to state 23


state 21

    (11) fun_single_param -> ID DOT FUN_SINGLE_PARAM LP . STRING RP

    STRING          shift and go to state 24


state 22

    (9) fun_without_operation -> FUN_WITHOUT_OPERATION LP STRING RP . SEMICOLON

    SEMICOLON       shift and go to state 25


state 23

    (10) fun_no_param -> ID DOT FUN_NO_PARAM LP RP .

    $end            reduce using rule 10 (fun_no_param -> ID DOT FUN_NO_PARAM LP RP .)


state 24

    (11) fun_single_param -> ID DOT FUN_SINGLE_PARAM LP STRING . RP

    RP              shift and go to state 26


state 25

    (9) fun_without_operation -> FUN_WITHOUT_OPERATION LP STRING RP SEMICOLON .

    $end            reduce using rule 9 (fun_without_operation -> FUN_WITHOUT_OPERATION LP STRING RP SEMICOLON .)


state 26

    (11) fun_single_param -> ID DOT FUN_SINGLE_PARAM LP STRING RP .

    $end            reduce using rule 11 (fun_single_param -> ID DOT FUN_SINGLE_PARAM LP STRING RP .)

